--- a/_data/skills.yml
+++ b/_data/skills.yml
@@ -7,3 +7,13 @@
 # Leadership
 - skill: Leadership
   description: Managed multiple asynchronous teams in the development, maintenance, and release of various web applications and websites.
+  
+  # New Skill
+- skill: Leadership 2
+  description: Managed multiple asynchronous teams in the development, maintenance
+  
+  # Education 2
+- skill: Education 2
+  description: Developed and maintained various conference talks, online training, and in-person trainings covering various topics including Git, GitHub, and Open Source.
+
+  
